<resources>
    <string name="app_name">DamApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">DAM App</string>
    <string name="nav_header_team">Team: 1089, 1092 and 1100</string>
    <string name="nav_header_version">Version: v1.0.0</string>
    <string name="nav_header_year">Year: 2024</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_about">About</string>
    <string name="todo">TODO</string>
    <string name="main_home_clicked">Home clicked</string>
    <string name="main_profile_clicked">Profile clicked</string>
    <string name="main_about_clicked">About clicked</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_date">Date</string>
    <string name="add_amount">Amount</string>
    <string name="add_category">Category</string>
    <string name="add_description">Description</string>
    <string name="add_save">Save</string>
    <string name="add_invalid_date">Invalid date!</string>
    <string name="add_invalid_amount">Invalid amount!</string>
    <string name="add_amount_must_be_greater_than_0">Amount must be greater than 0!</string>
    <string name="add_amount_must_be_a_valid_decimal_number">Amount must be a valid decimal number!</string>
    <string name="profile_salary">Salary</string>
    <string name="profile_name">Name</string>
    <string name="home_fragment">Home fragment</string>

    <string-array name="add_category">
        <item>Food</item>
        <item>T-Shirt</item>
        <item>Accessory</item>
        <item>Holiday</item>
    </string-array>
</resources>